Character moves, colides with the ground, and jumps. Start/Stop button added.

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@
     width: 200px;
 }
 
+#myCanvas {
+    border: 1px solid black;
+}
+
 #middle {
     border: 1px solid black;
     width:95%;
